{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 45,
  "lineage": "f18dc4b5-835e-862d-9949-8f48017ec665",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:369953507884:instance/i-0e94ba8ac153faea8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e94ba8ac153faea8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-074898f75927d768d",
            "private_dns": "ip-10-0-1-190.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.190",
            "public_ip": "54.224.80.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043c9b07fd09b52ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09da074cec2e6a555",
            "tags": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "tags_all": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011cd90dc282531cd"
            ]
          },
          "dependencies": [
            "aws_security_group.securitygroup",
            "aws_subnet.public-subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myinstance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:369953507884:instance/i-01564378c59264df3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01564378c59264df3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-011327051e5dbce84",
            "private_dns": "ip-10-0-2-148.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.148",
            "public_ip": "3.235.88.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e7c5a8b537bf34c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039ed310ea41b2c2b",
            "tags": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "tags_all": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011cd90dc282531cd"
            ]
          },
          "dependencies": [
            "aws_security_group.securitygroup",
            "aws_subnet.public-subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myinstance3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:369953507884:instance/i-0293623b366a2a63f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0293623b366a2a63f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b64480ec08ecd3be",
            "private_dns": "ip-10-0-3-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.182",
            "public_ip": "3.87.162.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ddc53b32631f77a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072a7a6d5eef7606d",
            "tags": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "tags_all": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011cd90dc282531cd"
            ]
          },
          "dependencies": [
            "aws_security_group.securitygroup",
            "aws_subnet.public-subnet3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:369953507884:internet-gateway/igw-09c04bcf20f0d95ca",
            "id": "igw-09c04bcf20f0d95ca",
            "owner_id": "369953507884",
            "tags": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "tags_all": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0f8fd3505b925ec0b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:369953507884:loadbalancer/app/task-alb/e7db006da12c286c",
            "arn_suffix": "app/task-alb/e7db006da12c286c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "task-alb-1289968900.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:369953507884:loadbalancer/app/task-alb/e7db006da12c286c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "task-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-011cd90dc282531cd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-039ed310ea41b2c2b"
              },
              {
                "subnet_id": "subnet-072a7a6d5eef7606d"
              },
              {
                "subnet_id": "subnet-09da074cec2e6a555"
              }
            ],
            "subnets": [
              "subnet-039ed310ea41b2c2b",
              "subnet-072a7a6d5eef7606d",
              "subnet-09da074cec2e6a555"
            ],
            "tags": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "tags_all": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0f8fd3505b925ec0b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.securitygroup",
            "aws_subnet.public-subnet1",
            "aws_subnet.public-subnet2",
            "aws_subnet.public-subnet3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listeners",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:369953507884:listener/app/task-alb/e7db006da12c286c/1b2123245624c7cb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:369953507884:targetgroup/target-group/4cee685216e66bdf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:369953507884:listener/app/task-alb/e7db006da12c286c/1b2123245624c7cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:369953507884:loadbalancer/app/task-alb/e7db006da12c286c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.securitygroup",
            "aws_subnet.public-subnet1",
            "aws_subnet.public-subnet2",
            "aws_subnet.public-subnet3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:369953507884:targetgroup/target-group/4cee685216e66bdf",
            "arn_suffix": "targetgroup/target-group/4cee685216e66bdf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:369953507884:targetgroup/target-group/4cee685216e66bdf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Created_by": "Dzenan_Mahalbasic",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "tags_all": {
              "Created_by": "Dzenan_Mahalbasic",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f8fd3505b925ec0b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:369953507884:targetgroup/target-group/4cee685216e66bdf-20230117195156990900000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:369953507884:targetgroup/target-group/4cee685216e66bdf",
            "target_id": "i-0e94ba8ac153faea8"
          },
          "dependencies": [
            "aws_instance.myinstance",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.securitygroup",
            "aws_subnet.public-subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:369953507884:targetgroup/target-group/4cee685216e66bdf-20230117195147019700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:369953507884:targetgroup/target-group/4cee685216e66bdf",
            "target_id": "i-01564378c59264df3"
          },
          "dependencies": [
            "aws_instance.myinstance2",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.securitygroup",
            "aws_subnet.public-subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-instance3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:369953507884:targetgroup/target-group/4cee685216e66bdf-20230117195217156400000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:369953507884:targetgroup/target-group/4cee685216e66bdf",
            "target_id": "i-0293623b366a2a63f"
          },
          "dependencies": [
            "aws_instance.myinstance3",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.securitygroup",
            "aws_subnet.public-subnet3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:369953507884:security-group/sg-011cd90dc282531cd",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011cd90dc282531cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "securitygroup",
            "name_prefix": "",
            "owner_id": "369953507884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "tags_all": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8fd3505b925ec0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:369953507884:subnet/subnet-09da074cec2e6a555",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09da074cec2e6a555",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "369953507884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "tags_all": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0f8fd3505b925ec0b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:369953507884:subnet/subnet-039ed310ea41b2c2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039ed310ea41b2c2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "369953507884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "tags_all": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0f8fd3505b925ec0b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:369953507884:subnet/subnet-072a7a6d5eef7606d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072a7a6d5eef7606d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "369953507884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "tags_all": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0f8fd3505b925ec0b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:369953507884:vpc/vpc-0f8fd3505b925ec0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b61506e493db3818",
            "default_route_table_id": "rtb-02f766339327ea03a",
            "default_security_group_id": "sg-02309f4d66ee09ff0",
            "dhcp_options_id": "dopt-0352fb3387182031a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8fd3505b925ec0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f766339327ea03a",
            "owner_id": "369953507884",
            "tags": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            },
            "tags_all": {
              "Created_by": "Bakyt Tokurov",
              "Environment": "Test",
              "Project": "VPC_Task",
              "Team": "DevOps"
            }
          }
        }
      ]
    }
  ]
}